<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Laravel\Sanctum\HasApiTokens;
use Spatie\Permission\Traits\HasRoles;

class User extends Authenticatable
{
    use HasApiTokens, HasFactory, Notifiable, HasRoles;

    /**
     * The attributes that are mass assignable.
     *
     * @var array<int, string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var array<int, string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * The attributes that should be cast.
     *
     * @var array<string, string>
     */
    protected $casts = [
        'email_verified_at' => 'datetime',
        'password' => 'hashed',
    ];
    public function cart()
    {
        return $this->hasOne(Cart::class, 'client_id', 'id');
    }

    /**
     * Get the client record associated with the user
     */
    public function client()
    {
        return $this->hasOne(Client::class, 'user_id', 'id');
    }

    // protected static function booted()
    // {
    //     static::created(function ($user) {
    //         app(\App\Repositories\Frontend\ClientRepository::class)->create([
    //             'user_id' => $user->id,
    //         ]);
    //     });
    // }
}